--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,20 @@
-.App {
-  text-align: center;
-}
-
 .App-content {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
   padding: 16px;
+}
+
+.nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.App-logo {
+  height: 5em;
 }
 
 button {
